--- a/trunk/c/configure.ac
+++ b/trunk/c/configure.ac
@@ -39,13 +39,14 @@ ACX_PTHREAD
 AC_CACHE_SAVE
 
 # Platform
-OD_CONFIG_LIBRARY
+TR_CONFIG_LIBRARY
 AC_CACHE_SAVE
 
 # Functions
 # AC_CACHE_SAVE
 
 # Libraries
+LIBCURL_CHECK_CONFIG
 OD_LIBCHECK
 
 # Output
