--- a/trunk/c/Mk/autoconf.mk.in
+++ b/trunk/c/Mk/autoconf.mk.in
@@ -19,6 +19,9 @@ LDFLAGS                 = @LDFLAGS@
 INSTALL                 = @INSTALL@
 LN_S                    = @LN_S@
 
+AR			= @AR@
+RANLIB			= @RANLIB@
+
 DOXYGEN			= @DOXYGEN@
 
 prefix			= @prefix@
