Skeleton out S3Connection context - Add new S3Connection implementation - Add unit test code - Create s3lib.h library header file - Autoconf ranlib and ar

--- a/c/Mk/autoconf.mk.in
+++ b/c/Mk/autoconf.mk.in
@@ -19,6 +19,9 @@ LDFLAGS                 = @LDFLAGS@
 INSTALL                 = @INSTALL@
 LN_S                    = @LN_S@
 
+AR			= @AR@
+RANLIB			= @RANLIB@
+
 DOXYGEN			= @DOXYGEN@
 
 prefix			= @prefix@
