--- a/c/tests/Makefile.in
+++ b/c/tests/Makefile.in
@@ -8,11 +8,12 @@ include ${top_builddir}/Mk/compile.mk
 
 
 TEST_OBJS=	tests.o \
+            S3Connection.o
 
 CFLAGS+=	@CHECK_CFLAGS@ -DTEST_DATA=\"${srcdir}/data\"
 OBJCFLAGS+=	@CHECK_CFLAGS@ -DTEST_DATA=\"${srcdir}/data\"
 LIBS+=		-ls3-testing $(OBJC_LIBS) $(LDAP_LIBS) @CHECK_LIBS@
-LDFLAGS+=	-L${top_builddir}src $(LIBS)
+LDFLAGS+=	-L${top_builddir}/src $(LIBS)
 
 # Recompile the tests every time
 all: tests
