--- a/trunk/c/src/Makefile.in
+++ b/trunk/c/src/Makefile.in
@@ -15,9 +15,9 @@ GEN_SRCS=
 TEST_LIB=	libs3-testing.a
 TEST_OBJS=
 
-CFLAGS+=	-fPIC $(LDAP_CFLAGS) $(OPENVPN_CFLAGS)
-OBJCFLAGS+=	-fPIC $(LDAP_CFLAGS) $(OPENVPN_CFLAGS)
-LIBS+=		$(LDAP_LIBS) $(OBJC_LIBS) $(FLEX_LIBS)
+CFLAGS+=	-fPIC $(LIBCURL_CFLAGS)
+OBJCFLAGS+=	-fPIC $(LIBCURL_CFLAGS)
+LIBS+=		$(LIBCURL_LIBS)
 
 
 INSTALL_LIB=		$(INSTALL) -m 755
