Initialize the curl library in the unit test, haul in the cflags/ldflags

--- a/c/Mk/autoconf.mk.in
+++ b/c/Mk/autoconf.mk.in
@@ -14,6 +14,9 @@ MAKE_LIBRARY		= @MAKE_LIBRARY@
 INSTALL_LIBRARY		= @INSTALL_LIBRARY@
 CLEAN_LIBRARY		= @CLEAN_LIBRARY@
 
+LIBCURL_CFLAGS		= @LIBCURL_CPPFLAGS@
+LIBCURL_LIBS		= @LIBCURL@
+
 LDFLAGS                 = @LDFLAGS@
 
 INSTALL                 = @INSTALL@
