--- a/c/tests/Makefile.in
+++ b/c/tests/Makefile.in
@@ -10,9 +10,8 @@ include ${top_builddir}/Mk/compile.mk
 TEST_OBJS=	tests.o \
             S3Connection.o
 
-CFLAGS+=	@CHECK_CFLAGS@ -DTEST_DATA=\"${srcdir}/data\"
-OBJCFLAGS+=	@CHECK_CFLAGS@ -DTEST_DATA=\"${srcdir}/data\"
-LIBS+=		-ls3-testing $(OBJC_LIBS) $(LDAP_LIBS) @CHECK_LIBS@
+CFLAGS+=	@CHECK_CFLAGS@ $(LIBCURL_CFLAGS) -DTEST_DATA=\"${srcdir}/data\"
+LIBS+=		-ls3-testing $(LIBCURL_LIBS) @CHECK_LIBS@
 LDFLAGS+=	-L${top_builddir}/src $(LIBS)
 
 # Recompile the tests every time
