--- a/trunk/c/Mk/autoconf.mk.in
+++ b/trunk/c/Mk/autoconf.mk.in
@@ -2,7 +2,7 @@ SHELL			= @SHELL@
 
 CC			= @CC@
 
-CFLAGS			= @CFLAGS@ @DEFS@ -Wall
+CFLAGS			= @CFLAGS@ @DEFS@ -Wall -Wextra
 
 LIBRARY_LD		= @LIBRARY_LD@
 LIBRARY_LD_FLAGS	= @LIBRARY_LD_FLAGS@
