Skeleton error parsing implementation using libxml2

--- a/c/Mk/autoconf.mk.in
+++ b/c/Mk/autoconf.mk.in
@@ -15,7 +15,10 @@ INSTALL_LIBRARY		= @INSTALL_LIBRARY@
 CLEAN_LIBRARY		= @CLEAN_LIBRARY@
 
 LIBCURL_CFLAGS		= @LIBCURL_CPPFLAGS@
-LIBCURL_LIBS		= @LIBCURL@
+LIBCURL_LDFLAGS		= @LIBCURL@
+
+XML_CFLAGS		= @XML_CPPFLAGS@
+XML_LDFLAGS		= @XML_LIBS@
 
 LDFLAGS                 = @LDFLAGS@
 
