--- a/c/configure.ac
+++ b/c/configure.ac
@@ -54,6 +54,9 @@ AC_CACHE_SAVE
 LIBCURL_CHECK_CONFIG([yes], [], [], [
 	AC_MSG_ERROR([s3lib requires libcurl (http://curl.haxx.se/).])
 ])
+AM_PATH_XML2([2.6.23], [], [
+	AC_MSG_ERROR([s3lib requires libxml2 (http://www.xmlsoft.org).])
+])
 OD_LIBCHECK
 
 # Output
