--- a/c/src/Makefile.in
+++ b/c/src/Makefile.in
@@ -8,16 +8,17 @@ include ${top_builddir}/Mk/compile.mk
 include ${top_builddir}/Mk/subdir.mk
 
 LIBRARY_NAME=	libs3
-LIBRARY_OBJS=	S3Connection.o
+LIBRARY_OBJS=	S3Connection.o \
+		S3Error.o \
+		S3Lib.o
 
 GEN_SRCS=
 
 TEST_LIB=	libs3-testing.a
 TEST_OBJS=
 
-CFLAGS+=	-fPIC $(LIBCURL_CFLAGS)
-OBJCFLAGS+=	-fPIC $(LIBCURL_CFLAGS)
-LIBS+=		$(LIBCURL_LIBS)
+CFLAGS+=	-fPIC $(LIBCURL_CFLAGS) $(XML_CFLAGS)
+LIBS+=		$(LIBCURL_LDFLAGS) $(XML_LDFLAGS)
 
 
 INSTALL_LIB=		$(INSTALL) -m 755
