--- a/trunk/c/tests/Makefile.in
+++ b/trunk/c/tests/Makefile.in
@@ -8,10 +8,11 @@ include ${top_builddir}/Mk/compile.mk
 
 
 TEST_OBJS=	tests.o \
-            S3Connection.o
+		S3Connection.o \
+		S3Error.o
 
-CFLAGS+=	@CHECK_CFLAGS@ $(LIBCURL_CFLAGS) -DTEST_DATA=\"${srcdir}/data\"
-LIBS+=		-ls3-testing $(LIBCURL_LIBS) @CHECK_LIBS@
+CFLAGS+=	@CHECK_CFLAGS@ $(LIBCURL_CFLAGS) $(XML_CFLAGS) -DTEST_DATA=\"${srcdir}/data\"
+LIBS+=		-ls3-testing $(LIBCURL_LDFLAGS) $(XML_LDFLAGS) @CHECK_LIBS@
 LDFLAGS+=	-L${top_builddir}/src $(LIBS)
 
 # Recompile the tests every time
