--- a/trunk/c/tests/Makefile.in
+++ b/trunk/c/tests/Makefile.in
@@ -9,7 +9,8 @@ include ${top_builddir}/Mk/compile.mk
 
 TEST_OBJS=	tests.o \
 		S3Connection.o \
-		S3Error.o
+		S3Error.o \
+		S3Request.o
 
 CFLAGS+=	@CHECK_CFLAGS@ $(LIBCURL_CFLAGS) $(XML_CFLAGS) -DTEST_DATA=\"${srcdir}/data\"
 LIBS+=		-ls3-testing $(LIBCURL_LDFLAGS) $(XML_LDFLAGS) @CHECK_LIBS@
