Initial implementation of an S3Request context

--- a/c/src/Makefile.in
+++ b/c/src/Makefile.in
@@ -10,7 +10,8 @@ include ${top_builddir}/Mk/subdir.mk
 LIBRARY_NAME=	libs3
 LIBRARY_OBJS=	S3Connection.o \
 		S3Error.o \
-		S3Lib.o
+		S3Lib.o \
+		S3Request.o
 
 GEN_SRCS=
 
