--- a/trunk/c/src/Makefile.in
+++ b/trunk/c/src/Makefile.in
@@ -13,6 +13,11 @@ LIBRARY_OBJS=	S3Connection.o \
 		S3Lib.o \
 		S3Request.o
 
+HEADERS=	$(srcdir)/S3Connection.h \
+		$(srcdir)/S3Error.h \
+		$(srcdir)/S3Lib.h \
+		$(srcdir)/S3Request.h
+
 GEN_SRCS=
 
 TEST_LIB=	libs3-testing.a
@@ -21,9 +26,7 @@ TEST_OBJS=
 CFLAGS+=	-fPIC $(LIBCURL_CFLAGS) $(XML_CFLAGS)
 LIBS+=		$(LIBCURL_LDFLAGS) $(XML_LDFLAGS)
 
-
-INSTALL_LIB=		$(INSTALL) -m 755
-LIBRARY_INSTALL_DIR=	$(DESTDIR)$(libdir)
+S3LIB_HEADER_DIR=	$(HEADER_INSTALL_DIR)/S3Lib
 
 all:: $(LIBRARY_FILE) $(TEST_LIB)
 
@@ -36,6 +39,8 @@ $(TEST_LIB): $(GEN_SRCS) $(LIBRARY_OBJS)
 
 install:: $(LIBRARY_FILE)
 	$(INSTALL_LIBRARY)
+	$(INSTALL_DIR) $(S3LIB_HEADER_DIR)
+	$(INSTALL_HEADER) $(HEADERS) $(S3LIB_HEADER_DIR)
 
 clean::
 	rm -f $(TEST_OBJS) $(LIBRARY_OBJS) $(TEST_LIB) $(GEN_SRCS)
