--- a/trunk/c/configure.ac
+++ b/trunk/c/configure.ac
@@ -9,6 +9,7 @@ AC_CANONICAL_SYSTEM
 AC_PROG_CC
 TR_WERROR
 TR_COMPILER_ATTRIBUTE_PRIVATE
+TR_COMPILER_ATTRIBUTE_UNUSED
 AC_CACHE_SAVE
 
 # Build Defines
