Added: - kazlib hash table implementation - LICENSE file - Support for __attribute__((unused))

--- a/c/configure.ac
+++ b/c/configure.ac
@@ -9,6 +9,7 @@ AC_CANONICAL_SYSTEM
 AC_PROG_CC
 TR_WERROR
 TR_COMPILER_ATTRIBUTE_PRIVATE
+TR_COMPILER_ATTRIBUTE_UNUSED
 AC_CACHE_SAVE
 
 # Build Defines
