Include safestr in the build, and move the .m4 files to their own m4 directory

--- a/c/Mk/autoconf.mk.in
+++ b/c/Mk/autoconf.mk.in
@@ -20,6 +20,9 @@ LIBCURL_LDFLAGS		= @LIBCURL@
 XML_CFLAGS		= @XML_CPPFLAGS@
 XML_LDFLAGS		= @XML_LIBS@
 
+SAFESTR_CFLAGS		= @SAFESTR_CPPFLAGS@
+SAFESTR_LDFLAGS		= @SAFESTR_LIBS@
+
 LDFLAGS                 = @LDFLAGS@
 
 INSTALL                 = @INSTALL@
