After a attempting to integrate safestr, it became clear that the library has some pretty fatal flaws. Back to the drawing board.

--- a/c/src/Makefile.in
+++ b/c/src/Makefile.in
@@ -24,8 +24,8 @@ GEN_SRCS=
 TEST_LIB=	libs3-testing.a
 TEST_OBJS=
 
-CFLAGS+=	-fPIC $(LIBCURL_CFLAGS) $(XML_CFLAGS) $(SAFESTR_CFLAGS)
-LIBS+=		$(LIBCURL_LDFLAGS) $(XML_LDFLAGS) $(SAFESTR_LDFLAGS)
+CFLAGS+=	-fPIC $(LIBCURL_CFLAGS) $(XML_CFLAGS)
+LIBS+=		$(LIBCURL_LDFLAGS) $(XML_LDFLAGS)
 
 S3LIB_HEADER_DIR=	$(HEADER_INSTALL_DIR)/S3Lib
 
