--- a/c/src/Makefile.in
+++ b/c/src/Makefile.in
@@ -12,7 +12,8 @@ LIBRARY_OBJS=	S3Connection.o \
 		S3Error.o \
 		S3Lib.o \
 		S3Request.o \
-		hash.o
+		hash.o \
+		list.o
 
 HEADERS=	$(srcdir)/S3Connection.h \
 		$(srcdir)/S3Error.h \
