Use the more explicit -fvisibility flag to hide all symbols unless explicitly marked public Rename TR_ prefixed visibility macros to S3_

--- a/c/Mk/autoconf.mk.in
+++ b/c/Mk/autoconf.mk.in
@@ -2,7 +2,7 @@ SHELL			= @SHELL@
 
 CC			= @CC@
 
-CFLAGS			= @CFLAGS@ @DEFS@ -Wall -Wextra
+CFLAGS			= @CFLAGS@ @CFLAGS_VISIBILITY@ @DEFS@ -Wall -Wextra
 
 LIBRARY_LD		= @LIBRARY_LD@
 LIBRARY_LD_FLAGS	= @LIBRARY_LD_FLAGS@
