--- a/c/doxyfile.in
+++ b/c/doxyfile.in
@@ -1029,18 +1029,18 @@ INCLUDE_FILE_PATTERNS  =
 # undefined via #undef or recursively expanded use the := operator 
 # instead of the = operator.
 
-PREDEFINED             = TR_DECLARE="" \
-                         TR_EXTERN=extern \
-                         TR_PRIVATE=""
+PREDEFINED             = S3_DECLARE="" \
+                         S3_EXTERN=extern \
+                         S3_PRIVATE=""
 
 # If the MACRO_EXPANSION and EXPAND_ONLY_PREDEF tags are set to YES then 
 # this tag can be used to specify a list of macro names that should be expanded. 
 # The macro definition that is found in the sources will be used. 
 # Use the PREDEFINED tag if you want to use a different macro definition.
 
-EXPAND_AS_DEFINED      = TR_DECLARE \
-                         TR_EXTERN \
-                         TR_PRIVATE
+EXPAND_AS_DEFINED      = S3_DECLARE \
+                         S3_EXTERN \
+                         S3_PRIVATE
 
 # If the SKIP_FUNCTION_MACROS tag is set to YES (the default) then 
 # doxygen's preprocessor will remove all function-like macros that are alone 
