--- a/trunk/c/src/Makefile.in
+++ b/trunk/c/src/Makefile.in
@@ -10,6 +10,7 @@ include ${top_builddir}/Mk/subdir.mk
 LIBRARY_NAME=	libs3
 LIBRARY_OBJS=	S3Connection.o \
 		S3Error.o \
+		S3Header.o \
 		S3Lib.o \
 		S3Request.o \
 		hash.o \
