--- a/trunk/c/tests/Makefile.in
+++ b/trunk/c/tests/Makefile.in
@@ -10,6 +10,7 @@ include ${top_builddir}/Mk/compile.mk
 TEST_OBJS=	tests.o \
 		S3Connection.o \
 		S3Error.o \
+		S3Header.o \
 		S3Request.o
 
 CFLAGS+=	@CHECK_CFLAGS@ $(LIBCURL_CFLAGS) $(XML_CFLAGS) -DTEST_DATA=\"${srcdir}/data\"
