--- a/trunk/c/tests/Makefile.in
+++ b/trunk/c/tests/Makefile.in
@@ -13,8 +13,8 @@ TEST_OBJS=	tests.o \
 		S3Header.o \
 		S3Request.o
 
-CFLAGS+=	@CHECK_CFLAGS@ $(LIBCURL_CFLAGS) $(XML_CFLAGS) -DTEST_DATA=\"${srcdir}/data\"
-LIBS+=		-ls3-testing $(LIBCURL_LDFLAGS) $(XML_LDFLAGS) @CHECK_LIBS@
+CFLAGS+=	@CHECK_CFLAGS@ $(LIBCURL_CFLAGS) $(XML_CFLAGS) $(SAFESTR_CFLAGS) -DTEST_DATA=\"${srcdir}/data\"
+LIBS+=		-ls3-testing $(LIBCURL_LDFLAGS) $(XML_LDFLAGS) $(SAFESTR_LDFLAGS) @CHECK_LIBS@
 LDFLAGS+=	-L${top_builddir}/src $(LIBS)
 
 # Recompile the tests every time
