--- a/trunk/c/Mk/autoconf.mk.in
+++ b/trunk/c/Mk/autoconf.mk.in
@@ -2,7 +2,7 @@ SHELL			= @SHELL@
 
 CC			= @CC@
 
-CFLAGS			= @CFLAGS@ @CFLAGS_VISIBILITY@ @DEFS@ -Wall -Wextra
+CFLAGS			= @CFLAGS@ @CFLAGS_VISIBILITY@ @PTHREAD_CFLAGS@ @DEFS@ -Wall -Wextra
 
 LIBRARY_LD		= @LIBRARY_LD@
 LIBRARY_LD_FLAGS	= @LIBRARY_LD_FLAGS@
@@ -23,7 +23,7 @@ XML_LDFLAGS		= @XML_LIBS@
 SAFESTR_CFLAGS		= @SAFESTR_CPPFLAGS@
 SAFESTR_LDFLAGS		= @SAFESTR_LIBS@
 
-LDFLAGS                 = @LDFLAGS@
+LDFLAGS                 = @LDFLAGS@ @PTHREAD_LIBS@
 
 INSTALL                 = @INSTALL@
 LN_S                    = @LN_S@
