--- a/c/configure.ac
+++ b/c/configure.ac
@@ -7,6 +7,7 @@ AC_CANONICAL_SYSTEM
 
 # Compiler
 AC_PROG_CC
+AC_PROG_CC_C99
 TR_WERROR
 TR_COMPILER_ATTRIBUTE_VISIBILITY
 TR_COMPILER_ATTRIBUTE_UNUSED
