--- a/c/Mk/autoconf.mk.in
+++ b/c/Mk/autoconf.mk.in
@@ -20,7 +20,7 @@ LIBCURL_LDFLAGS		= @LIBCURL@
 XML_CFLAGS		= @XML_CPPFLAGS@
 XML_LDFLAGS		= @XML_LIBS@
 
-SAFESTR_CFLAGS		= @SAFESTR_CPPFLAGS@
+SAFESTR_CFLAGS		= @SAFESTR_CFLAGS@
 SAFESTR_LDFLAGS		= @SAFESTR_LIBS@
 
 LDFLAGS                 = @LDFLAGS@ @LIBS@
