--- a/c/tests/Makefile.in
+++ b/c/tests/Makefile.in
@@ -13,7 +13,8 @@ TEST_OBJS=	tests.o \
 		S3HeaderTests.o \
 		S3LibTests.o \
 		S3ListTests.o \
-		S3RequestTests.o
+		S3RequestTests.o \
+		S3StringTests.o
 
 CFLAGS+=	@CHECK_CFLAGS@ $(LIBCURL_CFLAGS) $(XML_CFLAGS) $(SAFESTR_CFLAGS) -DTEST_DATA=\"${srcdir}/data\"
 LIBS+=		-ls3-testing $(LIBCURL_LDFLAGS) $(XML_LDFLAGS) $(SAFESTR_LDFLAGS) @CHECK_LIBS@
