--- a/trunk/c/tests/Makefile.in
+++ b/trunk/c/tests/Makefile.in
@@ -8,6 +8,7 @@ include ${top_builddir}/Mk/compile.mk
 
 
 TEST_OBJS=	tests.o \
+		S3AutoreleasePoolTests.o \
 		S3ConnectionTests.o \
 		S3DictTests.o \
 		S3ErrorTests.o \
