--- a/trunk/c/configure.ac
+++ b/trunk/c/configure.ac
@@ -62,6 +62,7 @@ LIBCURL_CHECK_CONFIG([yes], [], [], [
 AM_PATH_XML2([2.6.16], [], [
 	AC_MSG_ERROR([s3lib requires libxml2 (http://www.xmlsoft.org).])
 ])
+TR_OPENSSL
 TR_SAFESTR
 OD_LIBCHECK
 
