- Wire up HMAC-SHA1 for request signing - Link in openssl

--- a/c/Mk/autoconf.mk.in
+++ b/c/Mk/autoconf.mk.in
@@ -20,6 +20,9 @@ LIBCURL_LDFLAGS		= @LIBCURL@
 XML_CFLAGS		= @XML_CPPFLAGS@
 XML_LDFLAGS		= @XML_LIBS@
 
+OPENSSL_CFLAGS		= @OPENSSL_CFLAGS@
+OPENSSL_LDFLAGS		= @OPENSSL_LIBS@
+
 SAFESTR_CFLAGS		= @SAFESTR_CFLAGS@
 SAFESTR_LDFLAGS		= @SAFESTR_LIBS@
 
