--- a/c/src/Makefile.in
+++ b/c/src/Makefile.in
@@ -33,8 +33,8 @@ GEN_SRCS=
 TEST_LIB=	libs3-testing.a
 TEST_OBJS=
 
-CFLAGS+=	-fPIC $(LIBCURL_CFLAGS) $(XML_CFLAGS) $(SAFESTR_CFLAGS)
-LIBS+=		$(LIBCURL_LDFLAGS) $(XML_LDFLAGS) $(SAFESTR_LDFLAGS)
+CFLAGS+=	-fPIC $(LIBCURL_CFLAGS) $(XML_CFLAGS) $(SAFESTR_CFLAGS) $(OPENSSL_CFLAGS)
+LIBS+=		$(LIBCURL_LDFLAGS) $(XML_LDFLAGS) $(SAFESTR_LDFLAGS) $(SAFESTR_LDFLAGS) $(OPENSSL_LDFLAGS)
 
 S3LIB_HEADER_DIR=	$(HEADER_INSTALL_DIR)/S3Lib
 
