--- a/c/tests/Makefile.in
+++ b/c/tests/Makefile.in
@@ -7,7 +7,9 @@ include ${top_builddir}/Mk/autoconf.mk
 include ${top_builddir}/Mk/compile.mk
 
 
-TEST_OBJS=	tests.o \
+TEST_OBJS= \
+        tests.o \
+        S3AccountTests.o \
 		S3AutoreleasePoolTests.o \
 		S3ConnectionTests.o \
 		S3DictTests.o \
