--- a/c/src/Makefile.in
+++ b/c/src/Makefile.in
@@ -18,6 +18,7 @@ LIBRARY_OBJS= \
 		S3List.o \
 		S3Request.o \
 		S3String.o \
+		S3StringBuilder.o \
 		base64.o \
 		hash.o \
 		list.o
@@ -31,7 +32,8 @@ HEADERS= \
 		$(srcdir)/S3Lib.h \
 		$(srcdir)/S3List.h \
 		$(srcdir)/S3Request.h \
-		$(srcdir)/S3String.h
+		$(srcdir)/S3String.h \
+		$(srcdir)/S3StringBuilder.h
 
 GEN_SRCS=
 
