--- a/trunk/c/tests/Makefile.in
+++ b/trunk/c/tests/Makefile.in
@@ -18,6 +18,7 @@ TEST_OBJS= \
 		S3ListTests.o \
 		S3RequestTests.o \
 		S3StringTests.o \
+		S3StringBuilderTests.o \
 		base64tests.o
 
 CFLAGS+=	@CHECK_CFLAGS@ $(LIBCURL_CFLAGS) $(XML_CFLAGS) $(SAFESTR_CFLAGS) $(OPENSSL_CFLAGS) -DTEST_DATA=\"${srcdir}/data\"
