Fix up tabs in Makefiles, and output the S3Account object file to the correct directory

--- a/c/src/Makefile.in
+++ b/c/src/Makefile.in
@@ -9,8 +9,8 @@ include ${top_builddir}/Mk/subdir.mk
 
 LIBRARY_NAME=	libs3
 LIBRARY_OBJS= \
-        $(srcdir)/S3Account.o \
-        S3AutoreleasePool.o \
+		S3Account.o \
+		S3AutoreleasePool.o \
 		S3Connection.o \
 		S3Dict.o \
 		S3Error.o \
@@ -24,8 +24,8 @@ LIBRARY_OBJS= \
 		list.o
 
 HEADERS= \
-        $(srcdir)/S3Account.h \
-        $(srcdir)/S3AutoreleasePool.h \
+		$(srcdir)/S3Account.h \
+		$(srcdir)/S3AutoreleasePool.h \
 		$(srcdir)/S3Connection.h \
 		$(srcdir)/S3Dict.h \
 		$(srcdir)/S3Error.h \
