Enable support for compile-time checking of format string specifiers and arguments.

--- a/c/configure.ac
+++ b/c/configure.ac
@@ -11,6 +11,7 @@ AC_PROG_CC_C99
 TR_WERROR
 TR_COMPILER_ATTRIBUTE_VISIBILITY
 TR_COMPILER_ATTRIBUTE_UNUSED
+TR_COMPILER_ATTRIBUTE_FORMAT
 AC_CACHE_SAVE
 
 # Build Defines
