--- a/c/tests/Makefile.in
+++ b/c/tests/Makefile.in
@@ -10,6 +10,7 @@ include ${top_builddir}/Mk/compile.mk
 TEST_OBJS= \
 		tests.o \
 		S3AccountTests.o \
+		S3AtomicTests.o \
 		S3AutoreleasePoolTests.o \
 		S3ConnectionTests.o \
 		S3DictTests.o \
