Implement support for to GCC / Intel-style built-in atomic ops. Falls back to our own x86_32 implementation, and if that fails, errors. Also cleaned up compiler feature detection to better handle different compilers using the same header set.

--- a/c/configure.ac
+++ b/c/configure.ac
@@ -9,9 +9,7 @@ AC_CANONICAL_SYSTEM
 AC_PROG_CC
 AC_PROG_CC_C99
 TR_WERROR
-TR_COMPILER_ATTRIBUTE_VISIBILITY
-TR_COMPILER_ATTRIBUTE_UNUSED
-TR_COMPILER_ATTRIBUTE_FORMAT
+TR_COMPILER_FVISIBILITY
 AC_CACHE_SAVE
 
 # Build Defines
