--- a/trunk/c/configure.ac
+++ b/trunk/c/configure.ac
@@ -9,9 +9,7 @@ AC_CANONICAL_SYSTEM
 AC_PROG_CC
 AC_PROG_CC_C99
 TR_WERROR
-TR_COMPILER_ATTRIBUTE_VISIBILITY
-TR_COMPILER_ATTRIBUTE_UNUSED
-TR_COMPILER_ATTRIBUTE_FORMAT
+TR_COMPILER_FVISIBILITY
 AC_CACHE_SAVE
 
 # Build Defines
