Implement s3_atomic_uint32_get(), which implements a memory fence, if necessary. Add a (very slow) pthread-based atomic implementation, for unsupported platforms.

--- a/c/src/Makefile.in
+++ b/c/src/Makefile.in
@@ -10,6 +10,7 @@ include ${top_builddir}/Mk/subdir.mk
 LIBRARY_NAME=	libs3
 LIBRARY_OBJS= \
 		S3Account.o \
+		S3Atomic.o \
 		S3AutoreleasePool.o \
 		S3Connection.o \
 		S3Dict.o \
